--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,3 +43,13 @@ form{
   margin-left: 400px;
   margin-top: 100px;
 }
+
+.otp{
+  background-image: linear-gradient(#ECE9E6,#FFFFFF);
+  border:1px solid white;
+  border-radius: 10px;
+  width: 40%;
+  height: 40%;
+  margin-left: 400px;
+  margin-top: 100px;
+}
