--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,14 @@ code {
   text-align: center;
 }
 
+.fas{
+  color:#bdbdbd;
+  position: absolute;
+  width: 20px;
+  padding: 14px;
+  text-align: center;
+}
+
 input{
   padding: 10px 40px 10px 35px;
   height: 40px;
@@ -38,6 +46,7 @@ form{
   background-image: linear-gradient(#ECE9E6,#FFFFFF);
   border:1px solid white;
   border-radius: 10px;
+  box-shadow: 0px 5px 2px rgba(0, 0, 0, 0.1);
   width: 40%;
   height: 40%;
   margin-left: 400px;
@@ -52,4 +61,22 @@ form{
   height: 40%;
   margin-left: 400px;
   margin-top: 100px;
+}
+
+.category{
+  min-height: 75px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  border: 1px solid #EEEEEE;
+  background-color: #FFFFFF;
+  margin-bottom: 17px;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  transition: .1s linear all;
+  width: 32%;
+  margin-left: .5%;
+  margin-right: .5%;
 }
