--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.footer{
+  position:fixed;
+  bottom: 0;
+  background-color: black;
+  width: 100%;
+  margin: 0;
+}
+
+.fa-copyright{
+  position: relative;
+}
