--- a/client/src/component/Navbar/navbar.css
+++ b/client/src/component/Navbar/navbar.css
@@ -2,6 +2,7 @@ nav{
     /* display: flex;
     justify-content: space-evenly; */
     background-color: #dddddd;
+    /* background-color: white; */
 }
 
 ul{
@@ -24,5 +25,6 @@ li{
 
 button{
 	border: none;
-	background-color: #dddddd
+    background-color: #dddddd
+    /* background-color: white; */
 }
