--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,3 +80,26 @@ form{
   margin-left: .5%;
   margin-right: .5%;
 }
+
+.link{
+  min-height: 75px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  border: 1px solid #EEEEEE;
+  background-color: #FFFFFF;
+  margin-bottom: 17px;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  transition: .1s linear all;
+  width: 32%;
+  margin-left: .5%;
+  margin-right: .5%;
+}
+
+.category:hover{
+  width: 430px;
+  transition: height 1s;
+}
