--- a/client/src/component/About/about.css
+++ b/client/src/component/About/about.css
@@ -1,36 +1,71 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .tag-line{
-    text-align: center;
-    padding: 7%;
-    margin: 2%;
-    width: 80%;
-    margin-left: 12%;    
-  }
-  
-.heading{
-    font-size: 2rem;
-    line-height: 1.5;
-    font-weight: bolder;
-    color: rgb(243, 72, 72);
+  text-align: center;
+  padding: 7%;
+  margin: 2%;
+  width: 80%;
+  margin-left: 12%;
+  background-image: url('code-tutorial.jpg');  
+  background-repeat: no-repeat;
+  height: 100%;
+  backdrop-filter: opacity(10);
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(0px);
 }
+
+.heading{
+  font-size: 2rem;
+  line-height: 1.5;
+  font-weight: bolder;
+  color: #fff;
+  margin-left: -10%;
+  left: 60%;
+  top: 43%;
+  z-index: 2;
+  position:absolute;
+  transform: translate(-50%,-50%);
+  z-index: 5;
+  width: 45%;
+  padding: 40px 0;
+  text-align: center;
+  /* font-weight: bold; */
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.about-us{ 
+  text-align: center;
+}
+
+.heading-about-us{
+  font-weight: initial;
+  color:rgb(1, 1, 24);
+  font-family: proxima-nova,"sans-serif";
+  font-size: 32px;
+color: #001c3b;
+font-weight: 700;
+text-align: center;
   
-  .about-us{ 
-    margin-top: 5%;
-    /* padding: 2%; */
-    text-align: center;   
-  }
-  
-  .heading-about-us{
-    font-weight: bold;
-    color:rgb(1, 1, 24);
-    /* padding: 2%; */
-    
-  }
-  .para-about-us{
-    width: 60%;
-    margin-left: 20%;
-    line-height: 1.5;
-    font-weight: bold;
-    font-size: 1rem;
-    color: grey;
-  }
+}
+.para-about-us{
+  width: 60%;
+  margin-left: 20%;
+  line-height: 2;
+  font-weight: bold;
+  font-size: 1rem;
+  color: grey;
+  font-size: 18px;
+  font-weight: 600;
+  color: #7b8a9a;
+  margin: 10px 120px 0;
+  line-height: 1.35;
+  text-align: center;
+  padding-left: 250px;
+}
