--- a/client/src/component/About/about.css
+++ b/client/src/component/About/about.css
@@ -25,19 +25,20 @@ body, html {
   font-size: 2rem;
   line-height: 1.5;
   font-weight: bolder;
-  color: #fff;
+  color: black;
   margin-left: -10%;
-  left: 60%;
+  left: 55%;
   top: 43%;
   z-index: 2;
   position:absolute;
   transform: translate(-50%,-50%);
   z-index: 5;
   width: 45%;
-  padding: 40px 0;
+  padding: 30px 0;
   text-align: center;
   /* font-weight: bold; */
   background-color: rgba(0, 0, 0, 0.3);
+  color: #fac603 ;
 }
 
 .about-us{ 
