--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,7 +81,18 @@ form{
   margin-right: .5%;
 }
 
-.link{
+.category:hover{
+  width: 430px;
+  transition: height 1s;
+}
+
+.btn-primary{
+  position: relative;
+  /* padding:50px; */
+  /* display: flex; */
+}
+
+.title-handler{
   min-height: 75px;
   padding: 15px;
   display: flex;
@@ -98,9 +109,3 @@ form{
   margin-left: .5%;
   margin-right: .5%;
 }
-
-.category:hover{
-  width: 430px;
-  transition: height 1s;
-}
-
