--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,23 +2,24 @@
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App-logo {                                                                                                                                                           
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}                                                                                                                                                                                                                                                                                             
 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center;                                                                                                                                                
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -47,4 +48,8 @@
 
 .fa-copyright{
   position: relative;
+}
+
+.link{
+  color: #282c34 !important;
 }
