--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-style: oblique;
-  background-size:cover;                                                                                                                                                                                                                               ;
-  /* background-repeat: no-repeat; */
-  /* filter:blur(1px) */
-  /* -webkit-filter: blur(2px) grayscale(0.8) brightness(0.8); */
+ /* background-size:cover; 
+  background-image: url('trial.gif');                                                                                                                                                                                                                              ;
+  background-repeat: no-repeat; 
+  filter:blur(.1px) 
+*/  /* -webkit-filter: blur(2px) grayscale(0.8) brightness(0.8); */
 /* -webkit-transform-origin: top left; */
 /* -webkit-transform: scale(5); */
 }
@@ -107,6 +108,7 @@ form{
   min-height: 75px;
   padding: 15px;
   display: flex;
+  float: right;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
@@ -116,13 +118,17 @@ form{
   border-radius: 6px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   transition: .1s linear all;
-  width: 32%;
+  width: 50%;
   margin-left: .5%;
   margin-right: .5%;
   font-style: oblique;
+  /*background-color: whitesmoke;*/
+  background-image: linear-gradient(to left , #abbaab,#ffffff)
 }
 
-.form-group{
+
+
+/*.form-group{
   background-image:url('signup.jpg');
   background-repeat:none;
-}
+}*/
