--- a/client/src/component/Navbar/navbar.css
+++ b/client/src/component/Navbar/navbar.css
@@ -4,7 +4,9 @@ nav{
     background-color: white;
     /* background-color: white; */
     position: fixed;
-
+    padding: 0;
+    margin: 0;
+    z-index: -99;
 }
 
 ul{
