--- a/client/src/component/Profile/profile.css
+++ b/client/src/component/Profile/profile.css
@@ -27,3 +27,15 @@ a{
 .titles{
   color: black;
 }
+
+.update-profile{
+  text-align: center;
+  background-color: white;
+  border:1px solid white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  width: 40%;
+  height: 40%;
+  margin-left: 400px;
+  margin-top: 50px;
+}
