--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,8 +61,10 @@ form{
   box-shadow: 0px 5px 2px rgba(0, 0, 0, 0.1);
   width: 40%;
   height: 40%;
+  /*padding-top: 20vh; */
+  /*padding-left: 30vw;*/
   margin-left: 400px;
-  margin-top: 100px;
+  margin-top: 10px;
 }
 
 .otp{
@@ -126,9 +128,34 @@ form{
   background-image: linear-gradient(to left , #abbaab,#ffffff)
 }
 
+.create-category{
+  /*background-image: linear-gradient(#ECE9E6,#FFFFFF);*/
+  background-color: white;
+  border:1px solid white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  width: 40%;
+  height: 40%;
+  margin-left: 400px;
+  margin-top: 100px;
+}
 
 
+.create-title{
+  background-color: white;
+  border:1px solid white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  width: 40%;
+  height: 40%;
+  margin-left: 400px;
+  margin-top: 50px;
+}
 /*.form-group{
   background-image:url('signup.jpg');
   background-repeat:none;
+}*/
+
+/*.login-div{
+  padding-top: 150px;
 }*/
