--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,10 @@ input{
 }
 
 form{
+ /* background-image: url('signup_background.gif');
+  background-repeat: no-repeat;
+  background-size: auto;
+  filter:blur(0.5px);*/
   background-image: linear-gradient(#ECE9E6,#FFFFFF);
   border:1px solid white;
   border-radius: 10px;
@@ -75,6 +79,8 @@ form{
   height: 40%;
   margin-left: 400px;
   margin-top: 100px;
+}
+.container {
 }
 
 .category{
