--- a/client/src/component/Profile/profile.css
+++ b/client/src/component/Profile/profile.css
@@ -8,7 +8,7 @@
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  max-width: 250px;
   margin: auto;
   text-align: center;
   font-family: arial;
@@ -40,8 +40,29 @@ a{
   margin-top: 50px;
 }
 
-.container:hover{
+/*.container:hover{
   width: 40%;
   transition: height 1s;
-  /*background-color: teal;*/
+  background-color: teal;
+}*/
+
+.user-container{
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: white;
+  padding: 10px;
+}
+
+.user-profile{
+  background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid #EEEEEE;
+  background-color: #FFFFFF;
+  width:40vw;
+  margin-bottom: 17px;
+  border-radius: 6px;
+  padding: 20px;
+  /*font-size: 20px;*/
+  text-align: center;
+  margin-left: 400px;
 }
