--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-style: oblique;
+  /*font-family: 'Crimson Text', serif;*/
  /* background-size:cover; 
   background-image: url('trial.gif');                                                                                                                                                                                                                              ;
   background-repeat: no-repeat; 
@@ -55,10 +56,10 @@ input{
 }
 
 form{
- /* background-image: url('signup_background.gif');
+/*  background-image: url('signup_background.gif');
   background-repeat: no-repeat;
-  background-size: auto;
-  filter:blur(0.5px);*/
+  background-size: auto;*/
+  /*filter:blur(0.5px);*/
   background-image: linear-gradient(#ECE9E6,#FFFFFF);
   border:1px solid white;
   border-radius: 10px;
@@ -80,16 +81,37 @@ form{
   margin-left: 400px;
   margin-top: 100px;
 }
-.container {
+.category-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: white;
+  padding: 10px;
+  /*width:100vw;*/
 }
 
+
 .category{
+  background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid #EEEEEE;
+  background-color: #FFFFFF;
+  width:20vw;
+  margin-bottom: 17px;
+  border-radius: 6px;
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+}
+
+
+/*.container-fluid{
   min-height: 75px;
   padding: 15px;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+  text-align: center;
   border: 1px solid #EEEEEE;
   background-color: #FFFFFF;
   margin-bottom: 17px;
@@ -99,12 +121,12 @@ form{
   width: 32%;
   margin-left: .5%;
   margin-right: .5%;
-}
+}*/
 
-.category:hover{
-  width: 290px;
+/*.container-fluid:hover{
+  width: 350px;
   transition: height 1s;
-}
+}*/
 
 .btn-primary{
   position: relative;
@@ -165,3 +187,19 @@ form{
 /*.login-div{
   padding-top: 150px;
 }*/
+
+/*.homeLogo{
+  background-color: red;
+}*/
+
+.search-input{
+  height: 6.5vh;
+  /*border-radius: 4px;*/
+  border:none;
+  box-shadow: 5px 3px 5px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.search-input:hover{
+  box-shadow: 2px 4px 5px 2px rgba(0, 0, 0, 0.1);
+}
